--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.1",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "openai": "^5.2.0"
   }
 }
